--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <i class="fas fa-bars" onclick="openmenu()"></i>
       </nav>
       <div class="header-text">
-        <p>Full Stack Web Developer</p>
+        <p>Full Stack Web Developer and 3D Modeler</p>
         <h1>Hi, I'm <span>Amit</span><br>Gain From Bangladesh</h1>
       </div>
     </div>
@@ -41,12 +41,7 @@
         </div>
         <div class="about-col-2">
           <h1 class="sub-title">About Me</h1>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce risus nisi, dictum ac posuere non,
-            sollicitudin id tortor. Vivamus ac rhoncus purus. Praesent in mattis libero, non efficitur mauris. Nunc
-            elementum, mauris ut porttitor sollicitudin, est sapien rutrum nibh, eu dictum magna augue at turpis. Nulla
-            magna sem, dignissim quis tempor nec, consequat vel quam. Vivamus aliquam orci ac nulla rhoncus dignissim.
-            Maecenas molestie convallis sem in dapibus. Nullam auctor ac eros ut pharetra. Sed pulvinar bibendum
-            malesuada. Nullam luctus ornare venenatis.</p>
+          <p>I am a professional Web Developer, 3D Landmark Modeler, Digital Marketing, and SEO Expert. I am very diligent and efficient in doing my job. I am here to make your business grow with my reliable marketing skills. I have 5-6 years of experience in this work. I want to make my clients happy. Before I begin anything, I take the time and care to understand the main goals of your company and what the thing is intended to help you achieve. I will provide the Best Qualified Service.</p>
 
           <div class="tab-titles">
             <p class="tab-links active-link" onClick="opentab('skills')">Skills</p>
