--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <div id="header">
     <div class="container">
       <nav>
-        <img src="./images/logo.png" class="logo" alt="kevin-logo">
+        <img src="./images/logo.png" class="logo" alt="amit-logo">
         <ul id="sidemenu">
           <li><a href="#header">Home</a></li>
           <li><a href="#about">About</a></li>
