--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Personal Portfolio - Amit Gain</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
   <script src="https://kit.fontawesome.com/9bbf68b7d3.js" crossorigin="anonymous"></script>
 </head>
 
